--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ djangorestframework==3.13.1
 transliterate==1.10.2
 yandex-geocoder==2.0.0
 django-admin-extra-buttons==1.5.6
+django-apscheduler==0.6.2
